# winspot

./: LICENSE  README.md  pyproject.toml  windows_spotlight.py
.github/workflows/: publish-to-pypi.yml
src/: __init__.py  get_image_size.py  windows_spotlight.py  winspot.py
src/winspot/: winspot.py
