[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows_spotlight"
version = "0.1.0"
description = "Windows Spotlight helper utilities (image metadata without external image bindings)."
requires-python = ">=3.10"
license = {text = "MIT"}
license-files = ["LICEN[CS]E*", "vendored/licenses/*.txt", "AUTHORS.md"]
dependencies = []

[project.scripts]
winspot = "src.windows_spotlight:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
