[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows_spotlight"
version = "0.1.1"
description = "A CLI utility to export and reset Windows Spotlight images."
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*", "vendored/licenses/*.txt", "AUTHORS.md"]
dependencies = []

[project.scripts]
winspot = "src.windows_spotlight:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
